Fix import settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "stripInternal": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": false,
-    "rootDir": ".",
-    "sourceMap": false,
+    "sourceMap": true,
     "declaration": true,
     "listFiles": false,
     "traceResolution": false,
