--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cycle-cropper",
   "version": "1.1.7",
   "description": "Cycle.js component for cropper.js",
-  "main": "dist/index.js",
+  "main": "dist/index.ts",
+  "ts:main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "node fuse.js",
     "lint": "./node_modules/.bin/tslint -c tslint.json src/**/*.ts",
@@ -29,10 +31,15 @@
     "@types/cropperjs": "^1.1.0",
     "cropperjs": "^1.1.3"
   },
+  "peerDependencies": {
+    "@cycle/dom": "^19.3.0",
+    "@cycle/run": "^3.4.0",
+    "xstream": "^10.9.0"
+  },
   "devDependencies": {
     "@cycle/dom": "^19.3.0",
     "@cycle/run": "^3.4.0",
-    "fuse-box": "^2.4.0",
+    "fuse-box": "^3.0.0-next.26",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "watch": "^1.0.2",
