--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "cropperjs": "^1.1.3"
   },
   "peerDependencies": {
-    "@cycle/dom": "^19.3.0",
-    "@cycle/run": "^3.4.0",
-    "xstream": "^10.9.0"
+    "@cycle/dom": "^19.*",
+    "@cycle/run": "^3.*",
+    "xstream": "^11.*"
   },
   "devDependencies": {
     "@cycle/dom": "^19.3.0",
@@ -43,6 +43,6 @@
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "watch": "^1.0.2",
-    "xstream": "^10.9.0"
+    "xstream": "^11.*"
   }
 }
