--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cycle-cropper",
   "version": "1.1.10",
   "description": "Cycle.js component for cropper.js",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
   "ts:main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
