--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "lib": ["es2015"],
-    "types": ["node"],
-    "strict": true,
+    "types": [],
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
