--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.13",
   "description": "Cycle.js component for cropper.js",
   "main": "dist/index.js",
-  "ts:main": "src/index.ts",
-  "types": "src/index.ts",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "webpack",
     "lint": "./node_modules/.bin/tslint -c tslint.json src/**/*.ts",
