--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,28 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "inlineSources": true,
+    "lib": ["es2015", "dom"],
+    "listFiles": false,
+    "listEmittedFiles": false,
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es5",
-    "lib": ["es2015"],
-    "types": [],
+    "newLine": "LF",
+    "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "stripInternal": true,
+    "outDir": "dist",
     "skipDefaultLibCheck": true,
     "skipLibCheck": false,
+    "stripInternal": true,
     "sourceMap": true,
-    "declaration": true,
-    "listFiles": false,
-    "traceResolution": false,
-    "newLine": "LF",
-    "noEmitOnError": true,
-    "inlineSources": true,
-    "listEmittedFiles": false
+    "target": "es5",
+    "types": [],
+    "traceResolution": false
   },
   "include": [
     "src/**/*.ts",
