--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "webpack && dts-bundle --name cycle-pusher --baseDir dist --main dist/src/index.d.ts --out index.d.ts",
+    "build": "tsc",
     "lint": "./node_modules/.bin/tslint -c tslint.json src/**/*.ts",
     "watch:lint": "watch 'npm run lint' src",
     "watch:build": "watch 'npm run build' src",
@@ -38,13 +38,9 @@
   "devDependencies": {
     "@cycle/dom": "^19.3.0",
     "@cycle/run": "^3.4.0",
-    "css-loader": "^0.28.8",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "ts-loader": "^3.2.0",
     "tslint": "^5.7.0",
     "typescript": "^2.6.2",
     "watch": "^1.0.2",
-    "webpack": "^3.10.0",
     "xstream": "^11.*"
   }
 }
